--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "jberall/yii2-signature-draw",
+    "name": "fvy/yii2-signature-draw",
     "description": "Renders a Signature Pad using jSignature",
     "type": "yii2-extension",
     "keywords": ["yii2","extension","jSignature","canvas"],
     "license": "MIT",
     "authors": [
         {
-            "name": "Jonathan Berall",
-            "email": "jberall@gmail.com"
+            "name": "Slava",
+            "email": "fslava2009@gmail.com"
         }
     ],
     "require": {
@@ -16,7 +16,7 @@
     },
     "autoload": {
         "psr-4": {
-            "jberall\\signaturedraw\\": "src"
+            "fvy\\signaturedraw\\": "src"
         }
     }
 }
